--- a/app/views/admin_manage/sign_in.html.erb
+++ b/app/views/admin_manage/sign_in.html.erb
@@ -13,7 +13,7 @@
 				<%=label_tag :label1,"用户名:" %> <%=f.text_field :admin_name %> </br></br>
 				<%=label_tag :label2,"密码:" %> <%=f.password_field :admin_passwd_encryption %> </br></br>
 				 <div class="btn-toolbar">
-					 <%= submit_tag("登入",class: "btn btn-primary",id: "login_button") %>
+					 <%= submit_tag("登入",class: "btn btn-primary",id: "login_button",data: {disable_with: '登入中.'}) %>
 			          	</div>
 			<% end %>
 		</div>
