--- a/app/views/registe/index.html.erb
+++ b/app/views/registe/index.html.erb
@@ -18,7 +18,7 @@
 					 <%= label_tag(:l5, "流水金额起始:",class:"label_inline") %> <%= text_field_tag(:min_amount) %>
 					 <%= label_tag(:l6, "流水金额终止:",class:"label_inline") %> <%= text_field_tag(:max_amount) %>
 					 <div class="btn-toolbar">
-						 <%= submit_tag("查询",class: "btn btn-primary") %>
+						 <%= submit_tag("查询",class: "btn btn-primary",data: {disable_with: '查询中.'}) %>
 					          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
 				          	</div>
 				<% end %>	
