--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -24,7 +24,7 @@
 				 &nbsp;&nbsp;
 				 <%= label_tag(:l5, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
 				 <div class="btn-toolbar">
-					 <%= submit_tag("查询",class: "btn btn-primary",id: "button_submit_time") %>
+					 <%= submit_tag("查询",class: "btn btn-primary",id: "button_submit_time",data: {disable_with: '查询中.'}) %>
 				          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
 			          	</div>
 			<% end %>
