--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,9 @@
 	      <% if isAuthority('3') %>
 	        <li > <%=link_to t('财务确认'),transaction_reconciliation_confirm_search_path,method: :get%> </li>
 	      <% end %>
+	      <% if isAuthority('14') %>
+	        <li > <%= link_to '电商报表',transaction_reconciliation_merchant_index_path,method: :get %> </li>
+	      <% end %>
 	    </ul>
 
 	    <a href="#file-menu" class="nav-header" data-toggle="collapse"><i class="icon-file"></i>文件上传</a>
