--- a/app/views/upload_file/index.html.erb
+++ b/app/views/upload_file/index.html.erb
@@ -15,6 +15,21 @@
 			</div>
 		<% end %>
 
+		<% unless flash[:notice_2].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:notice_2]%>
+			</div>
+		<% end %>
+
+		<% unless flash[:error_2].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:error_2]%>
+			</div>
+		<% end %>
+
+
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
 			<strong>提示:</strong> 请选择业务类型并上传文件!
@@ -26,7 +41,7 @@
 						["sofort对账明细","sofort_transaction"],
 						["荷兰银行事务历史记录","NL_ABN_Bank"],
 						["德国银行事务历史记录","DE_BOC_Bank"],
-						["电商-德国/奥地利银行交易记录上传","MERCHANT_DE_AT_CASH_IN_BANK"],
+						["奥地利银行事务历史记录","AT_STA_Bank"],
 						["电商-英国银行交易记录上传","MERCHANT_EN_CASH_IN_BANK"],
 						["电商-荷兰银行交易记录上传","MERCHANT_NL_CASH_IN_BANK"] 
 					], "NL_ABN_Bank") %>
