--- a/app/views/online_pay/show_single_detail.html.erb
+++ b/app/views/online_pay/show_single_detail.html.erb
@@ -8,11 +8,11 @@
 	 -->
 	<div class="row-fluid">
 		<div class="well">
-			<table class="table">
+			<table class="table" style="table-layout:fixed;word-wrap:break-word;">
 				<tbody>
 					<tr>
 						<td>订单号/补款号 </td>
-						<td><%= @online_pay.order_no %></td>
+						<td ><%= @online_pay.order_no %></td>
 					</tr>
 					<tr>
 						<td>交易号</td>
