--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,6 +90,7 @@
         <div class="no_content">
  <% end %>
 	<div class="header">
+		<% if session[:admin].present? %>
 		<div class="stats">
 			<p class="stat">
 				<span class="number">
@@ -103,6 +104,7 @@
 			</p>
 			<p class="stat"><span class="number">0</span>waiting</p>
 		</div>
+		<% end %>
 		<h1 class="page-title"><%=@page_title || 'title' %></h1>
 	</div>
 
