--- a/app/views/admin_manage/sign_index.html.erb
+++ b/app/views/admin_manage/sign_index.html.erb
@@ -1,6 +1,22 @@
 <div class="container-fluid">
 <% @page_title="登入界面" %>
 	<div class="row-fluid">
+		<% unless Rails.env.production?%>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<pre>
+<strong>此提示不在生产环境显示</strong>
+支付宝 - 暂无,使用实际生产帐号支付
+paypal - 支付系统沙盒环境(只支持德国)
+	用户名:mypost4u_buyer@126.com
+	密码:1qaz@WSX
+sofort - 支付系统测试项目(只支持德国)
+	Sort code or BIC:88888888
+	Account number:1234(任意大于4长度)
+	PIN:1234(任意大于4长度)</pre>
+			</div>
+		<% end %>
+
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
 			<%=session['admin']%> 登入成功 : <%=@finance_summary.end_time%>
