前台保存上次输入的值，方便操作

--- a/app/views/simulation/index_interface_call.html.erb
+++ b/app/views/simulation/index_interface_call.html.erb
@@ -16,25 +16,25 @@
 			<div class="simulation_interface_call">
 				<%= form_tag("/simulation/interface_call", method: "post") do %>
 				         <%= label_tag(:label1, "调用网址:",class:"label_inline") %> 
-				         <input id="url" name="url" type="text" value="http://" style="width:600px"/>
+				         <input id="url" name="url" type="text" value=<%=@display_interface['url']%> style="width:600px"/>
 				         </br>
 				         <%= label_tag(:label2, "调用方式:",class:"label_inline") %> 
-				         <%= select_tag(:method,options_for_select([["get","get"],["post","post"]],"get")) %>
+				         <%= select_tag(:method,options_for_select([["get","get"],["post","post"]],@display_interface['method'])) %>
 				         <%= label_tag(:label6, "认证方式:",class:"label_inline") %> 
-				         <%= select_tag(:auth_method,options_for_select([["HTTP DIGEST","http_digest"],["HTTP BASIC","http_basic"],["TOKEN","token"],["无",""]],"HTTP DIGEST")) %>
+				         <%= select_tag(:auth_method,options_for_select([["HTTP DIGEST","http_digest"],["HTTP BASIC","http_basic"],["TOKEN","token"],["无",""]],@display_interface['auth_method'])) %>
 				         </br>
 				         <%= label_tag(:label3, "用户名:",class:"label_inline") %> 
-				         <%= text_field_tag(:username) %>
+				         <%= text_field_tag(:username,@display_interface['username']) %>
 				         <%= label_tag(:label4, "密码:",class:"label_inline") %> 
-				         <%= text_field_tag(:password) %>
+				         <%= text_field_tag(:password,@display_interface['password']) %>
 				         <%= label_tag(:label7, "token:",class:"label_inline") %> 
-				         <%= text_field_tag(:token) %>
+				         <%= text_field_tag(:token,@display_interface['token']) %>
 				         </br>
 				         <%= label_tag(:label5, "报文:",class:"label_inline") %>
 				         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				         <%= submit_tag("调用",class: "btn") %>
 				         </br>
-				         <textarea placeholder="输入json字符串,使用:作为key,value分隔" id="body" name="body" style="width:800px;height:400px"></textarea>
+				         <textarea placeholder="输入json字符串,使用:作为key,value分隔" id="body" name="body" style="width:800px;height:400px"><%=@display_interface['body']%></textarea>
 				<% end %>
 			</div>
 		</div>
