--- a/app/views/online_pay/index.html.erb
+++ b/app/views/online_pay/index.html.erb
@@ -20,10 +20,10 @@
 					 <%= select_tag(:online_pay_status,options_for_select([["",""],["成功","succ"],["成功(异常)","fail_third"],["未完成","quaie"],["失败","fail"]])) %>
 					 </br>
 					 <%= label_tag(:l3, "支付类型:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
+					 <%= select_tag(:payway,options_for_select(dynamic_payway_select_tag)) %> 
 					 &nbsp;&nbsp;&nbsp;
 					 <%= label_tag(:l4, "支付子类型:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;
-					 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
+					 <%= select_tag(:paytype,options_for_select(dynamic_paytype_select_tag)) %> 
 					 </br>
 					 <%= label_tag(:l5, "用户名:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					 <%= text_field_tag(:username) %>
