--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -19,10 +19,10 @@
 				 &nbsp;&nbsp;
 				 </br>
 				 <%= label_tag(:l3, "支付类型:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
+				 <%= select_tag(:payway,options_for_select(dynamic_payway_select_tag)) %> 
 				 &nbsp;&nbsp;&nbsp;
 				 <%= label_tag(:l4, "支付子类型:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;
-				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
+				 <%= select_tag(:paytype,options_for_select(dynamic_paytype_select_tag)) %> 
 				 </br>
 				 <%= label_tag(:l5, "对账状态:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 <%= select_tag(:reconciliation_flag,options_for_select([["",""],["未对账","0"],["对账失败","1"],["对账成功","2"]])) %> 
