--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -12,7 +12,10 @@
 				 <%= select_tag(:payway,options_for_select(dynamic_payway_select_tag)) %> 
 				 &nbsp;&nbsp;
 				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;&nbsp;
-				 <%= select_tag(:paytype,options_for_select(dynamic_paytype_select_tag)) %> 
+				 <%= select_tag(:paytype,options_for_select(dynamic_paytype_select_tag)) %>
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l11, "订单类型:",class:"label_inline") %>
+				 <%= select_tag(:order_type,options_for_select(dynamic_order_type_select_tag)) %>  
 				 </br>
 				 <%= label_tag(:l3, "货币:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 <%= select_tag(:currency,options_for_select([["",""],["EUR","EUR"],["GBP","GBP"],["RMB","RMB"]])) %> 
