--- a/app/views/transaction_reconciliation/_index.html.erb
+++ b/app/views/transaction_reconciliation/_index.html.erb
@@ -15,6 +15,8 @@
 					<%=reconciliation_detail.online_pay.order_no%>
 				</span>
 			</a>
+		<% else %>
+			<%=reconciliation_detail.order_no%>
 		<% end %> 
 	</td>
 	<td class="td_nowrap">  <%= reconciliation_flag_mapping(reconciliation_detail.reconciliation_flag) %>  </td>
