交易查询页面增加是否使用优惠券字段显示

--- a/app/views/online_pay/show_single_detail.html.erb
+++ b/app/views/online_pay/show_single_detail.html.erb
@@ -80,6 +80,10 @@
 						<% end %>
 					</td>
 				</tr>
+				<tr>
+					<td>是否使用优惠券</td>
+					<td><%= true_false_mapping(@online_pay.cash_coupon) %></td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
